--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "react-native-webview": "5.8.1",
     "react-navigation": "^3.13.0",
     "react-navigation-header-buttons": "^2.1.1",
-    "regenerator": "^0.13.3",
-    "snjs": "0.2.8",
-    "standard-file-js": "0.3.69",
-    "stacktrace-parser": "0.1.4"
+    "react-navigation-stack": "^1.10.3",
+    "regenerator": "^0.14.2",
+    "snjs": "0.2.9",
+    "stacktrace-parser": "0.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
